--- a/templates/turnos/listaTurnos.html.twig
+++ b/templates/turnos/listaTurnos.html.twig
@@ -4,10 +4,7 @@
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body">
                     <h5 class="card-title mb-3">Listado de turnos</h5>
-                    <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="Filtrar reservas..." id="filtroReservas">
-                    </div>
-                    <div class="table-responsive">
+                    <div class="table-responsive" style="overflow-x:auto; max-height: 50vh; overflow-y:auto;">
                         <table class="table table-striped align-middle mb-0 table-sm">
                             <thead class="table-dark">
                                 <tr>
