--- a/templates/contabilidad/listaBonos.html.twig
+++ b/templates/contabilidad/listaBonos.html.twig
@@ -4,14 +4,12 @@
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body">
                     <h5 class="card-title mb-3">Listado de bonos</h5>
-                    <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="Filtrar bonos..." id="filtroBonos">
-                    </div>
                     <div class="table-responsive" style="max-height: 300px; overflow-y: auto; ">
                         <table class="table table-striped table-hover align-middle mb-0 table-sm" style="min-width: 600px;">
                             <thead class="table-dark" style="position: sticky; top: 0; z-index: 2;">
                                 <tr>
                                     <th  colspan=2 style="background: #212529;">Beneficiario</th>
+                                    <th style="background: #212529;">Valor</th>
                                     <th style="background: #212529;">Usuario crea</th>
                                     <th style="background: #212529;">Fecha crea</th>
                                     <th style="background: #212529;">Usuario cobro</th>
@@ -31,7 +29,8 @@
                                                     <i class="fa-solid fa-circle-check text-secondary"></i>
                                                 {% endif %}
                                             </td>
-                                            <td style="">{{ bono.beneficiario.name }} {{ bono.beneficiario.lastname }}</td>
+                                            <td style="">{{ bono.usuario.name }}</td>
+                                            <td style="text-aling:right">$ {{ bono.valor|number_format() }}</td>
                                             <td style="">{{ bono.usucrea.name }}</td>
                                             <td style="">{{ bono.fechacrea|date('Y-m-d') }}</td>
                                             <td style="">
