--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -21,13 +21,9 @@
                 <label for="password" class="form-label">Contraseña</label>
                 <input type="password" id="password" name="_password" class="form-control" required>
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="remember_me" name="_remember_me">
-                <label class="form-check-label" for="remember_me">Recordarme</label>
-            </div>
             <button type="submit" class="btn btn-primary w-100">Entrar</button>
         </form>
     </div>
 </div>
-<script src="/build/login_ingreso.js"></script>
+{# Removed direct reference to non-built asset /build/login_ingreso.js. The page already includes assets via base.html.twig ({{ encore_entry_script_tags('app') }}) #}
 {% endblock %}
