--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -21,39 +21,41 @@
         <li class="nav-item">
           <a class="nav-link" href="#" data-action="sistema--app#cambiarVista" data-vista = '2'><i class="fas fa-users me-2"></i>Clientes</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-store"></i> Stock
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fa-solid fa-cart-shopping"></i> Productos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-paste"></i> Registro de entradas</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa-solid fa-book"></i> Contabilidad
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="10"><i class="fa-solid fa-arrow-right-to-bracket"></i> Turnos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="12"><i class="fa-solid fa-money-check-dollar"></i> Bonos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="11"><i class="fas fa-calculator"></i> Movimientos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="13"><i class="fas fa-paste"></i> Informes</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-cogs me-2"></i>Configuraciones
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="3"><i class="fas fa-layer-group me-2"></i>Pisos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="4"><i class="fas fa-door-open me-2"></i>Habitaciones</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="7"><i class="fas fa-concierge-bell me-2"></i>Servicios</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="5"><i class="fas fa-building me-2"></i>Compañias</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="6"><i class="fas fa-id-card me-2"></i>Tipos de documentos</a></li>
-            <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="14"><i class="fas fa-id-card me-2"></i>Usuarios</a></li>
-          </ul>
-        </li>
+        {% if is_granted('ROLE_SUPERUSER') or is_granted('ROLE_ADMINISTRADOR') %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fas fa-store"></i> Stock
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="8"><i class="fa-solid fa-cart-shopping"></i> Productos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="9"><i class="fas fa-paste"></i> Registro de entradas</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-book"></i> Contabilidad
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="10"><i class="fa-solid fa-arrow-right-to-bracket"></i> Turnos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="12"><i class="fa-solid fa-money-check-dollar"></i> Bonos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="11"><i class="fas fa-calculator"></i> Movimientos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="13"><i class="fas fa-paste"></i> Informes</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="configuracionesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fas fa-cogs me-2"></i>Configuraciones
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="configuracionesDropdown">
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="3"><i class="fas fa-layer-group me-2"></i>Pisos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="4"><i class="fas fa-door-open me-2"></i>Habitaciones</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="7"><i class="fas fa-concierge-bell me-2"></i>Servicios</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="5"><i class="fas fa-building me-2"></i>Compañias</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="6"><i class="fas fa-id-card me-2"></i>Tipos de documentos</a></li>
+              <li><a class="dropdown-item" href="#" data-action="sistema--app#cambiarVista" data-vista="14"><i class="fa-solid fa-users-between-lines me-2"></i>Usuarios</a></li>
+            </ul>
+          </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt me-2"></i>Cerrar sesión</a>
         </li>
