--- a/templates/registration/listaUsuarios.html.twig
+++ b/templates/registration/listaUsuarios.html.twig
@@ -5,16 +5,16 @@
                 <div class="card-body">
                     <h5 class="card-title mb-3">Listado de usuarios</h5>
                     <div class="table-responsive" style="overflow-x:auto; max-height: 50vh; overflow-y:auto;">
-                        <table class="table table-striped table-hover align-middle mb-0">
+                        <table class="table  table-hover align-middle mb-0 table-sm">
                             <thead class="table-dark" style="position: sticky; top: 0; z-index: 2;">
                                 <tr>
                                     <th style="background: #212529;">Nombre</th>
                                     <th style="background: #212529;">Usuario</th>
                                     <th style="background: #212529;">Tipo</th>
                                     <th style="background: #212529;">Celular</th>
+                                    <th style="background: #212529;">Turno</th>
                                     <th style="background: #212529;">Cambio clave</th>
                                     <th style="background: #212529;">Ultimo accesso</th>
-                                    <th style="background: #212529;">Estado</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -24,6 +24,11 @@
                                         <td>{{ usuario.userName }}</td>
                                         <td>{{ usuario.tipo }}</td>
                                         <td>{{ usuario.celular }}</td>
+                                        <td>
+                                            <div class="form-check form-switch d-flex justify-content-center align-items-center m-0" style="height:100%;">
+                                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" {% if usuario.isTurno %} checked {% endif  %} data-action="change->sistema--app#cambiarTurnoUser" data-id={{ usuario.id }}>
+                                            </div>
+                                        </td>
                                         <td>{{ usuario.cambioClave }}</td>
                                         <td>{{ usuario.fechaUltimoAccesso }}</td>
                                     </tr>
@@ -33,80 +38,63 @@
                     </div>
                 </div>
                 <div class="mt-3 d-flex justify-content-space-between" style="margin:20px">
-                    <button type="button" class="btn btn-primary" style="margin-right:10px" data-action="sistema--app#abrirModalNuevoCliente" data-accion = '1' data-id = '0'>Nuevo</button>
+                    <button type="button" class="btn btn-primary" style="margin-right:10px" data-action="sistema--app#abrirModalNuevoUsuario" data-accion = '1' data-id = '0'>Nuevo</button>
                     <a href="{{ path('app_inicio') }}" class="btn btn-danger">Regresar</a>
                 </div>
             </div>
         </div>
     </div>
 
-  <!-- Modal para registrar clientes -->
-  {#<div class="modal fade" id="modalNuevoCliente" data-sistema--app-target="modalNuevoCliente" tabindex="-1" aria-labelledby="modalNuevoClienteLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+  <!-- Modal para registrar usuarios -->
+  <div class="modal fade" id="modalNuevoUsuario" data-sistema--app-target="modalNuevoUsuario" tabindex="-1" aria-labelledby="modalNuevoUsuarioLabel" aria-hidden="true">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title"><span data-sistema--app-target="modalClienteLabel"></span></h5>
+          <h5 class="modal-title">Nuevo usuario</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form data-sistema--app-target="formNuevoCliente">
-          <input type="hidden" name="id" data-sistema--app-target="idCliente" value="0">
-           <div class="modal-body">
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="tipoDoc" class="form-label" style="font-weight: bold;">Tipo de documento</label> 
-                    <select class="form-select" id="tipoDoc" name="tipoDoc" data-sistema--app-target="selectTipoDocCliente"  data-action="change->sistema--app#validaBtnGuardarCliente">
-                        <option value="">Seleccione tipo de documento</option>
-                        {% for document in documents %}
-                            <option value="{{ document.id }}">{{ document.name }}</option>
-                        {% endfor %}                        
-                    </select>
+        {{ form_start(registrationForm,{ 'attr': {'data-sistema--app-target': 'formRegistroUsuario'} }) }}
+            <div class="modal-body">
+                <div class="row mb-3">
+                    <div class="col-6">
+                        {{ form_label(registrationForm.name) }}
+                        {{ form_widget(registrationForm.name, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(registrationForm.name) }}
+                    </div>
+                    <div class="col-6">
+                        {{ form_label(registrationForm.roles) }}
+                        {{ form_widget(registrationForm.roles, {'attr': {'class': 'form-select'}}) }}
+                        {{ form_errors(registrationForm.roles) }}
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <label for="numeroDocCliente" class="form-label" style="font-weight: bold;">Numero de documento</label> 
-                    <input type="text" name="numeroDocCliente" class="form-control" id="numeroDocCliente" data-sistema--app-target="numeroDocCliente" placeholder="Ingrese el numero de documento" data-action="blur->sistema--app#validaBtnGuardarCliente">
+                 <div class="row mb-3">
+                    <div class="col-6">
+                        {{ form_label(registrationForm.tipo) }}
+                        {{ form_widget(registrationForm.tipo, {'attr': {'class': 'form-select'}}) }}
+                        {{ form_errors(registrationForm.tipo) }}
+                    </div>
+                    <div class="col-6">
+                        {{ form_label(registrationForm.celular) }}
+                        {{ form_widget(registrationForm.celular, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(registrationForm.celular) }}
+                    </div>
                 </div>
+                <div class="row mb-3">
+                    <div class="col-6">
+                        {{ form_label(registrationForm.username) }}
+                        {{ form_widget(registrationForm.username, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(registrationForm.username) }}
+                    </div>
+                    <div class="col-6">
+                        {{ form_label(registrationForm.plainPassword) }}
+                        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(registrationForm.plainPassword) }}
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary" data-action="sistema--app#registrarUsuario">Registrar</button>
             </div>
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="nombresCliente" class="form-label" style="font-weight: bold;">Nombres</label> 
-                    <input type="text" name="nombresCliente" class="form-control" id="nombresCliente" data-sistema--app-target="nombresCliente" placeholder="Ingrese los nombres" data-action="blur->sistema--app#validaBtnGuardarCliente">
-                </div>
-                <div class="col-md-6">
-                    <label for="apellidosCliente" class="form-label" style="font-weight: bold;">Apellidos</label> 
-                    <input type="text" name="apellidosCliente" class="form-control" id="apellidosCliente" data-sistema--app-target="apellidosCliente" placeholder="Ingrese los apellidos" data-action="blur->sistema--app#validaBtnGuardarCliente">
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="numeroCelCliente" class="form-label" style="font-weight: bold;">Numero Celular</label> 
-                    <input type="text" name="numeroCelCliente" class="form-control" id="numeroCelCliente" data-sistema--app-target="numeroCelCliente" placeholder="Ingrese el numero de celular" data-action="blur->sistema--app#validaBtnGuardarCliente">
-                </div>
-                <div class="col-md-6">
-                    <label for="placaCliente" class="form-label" style="font-weight: bold;">Placa</label> 
-                    <input type="text" name="placaCliente" class="form-control" id="placaCliente" data-sistema--app-target="placaCliente" placeholder="Ingrese el numero de la placa" data-action="blur->sistema--app#validaBtnGuardarCliente">
-                </div>
-            </div>              
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="numeroVehiculoCliente" class="form-label" style="font-weight: bold;">Numero de vehiculo</label> 
-                    <input type="text" name="numeroVehiculoCliente" class="form-control" id="numeroVehiculoCliente" data-sistema--app-target="numeroVehiculoCliente" placeholder="Ingrese el numero del vehiculo" data-action="blur->sistema--app#validaBtnGuardarCliente">
-                </div>
-                <div class="col-md-6">
-                    <label for="selectCompaniaCliente" class="form-label" style="font-weight: bold;">Compañia</label> 
-                    <select class="form-select" id="selectCompaniaCliente" name="selectCompaniaCliente" data-sistema--app-target="selectCompaniaCliente"  data-action="change->sistema--app#validaBtnGuardarCliente">
-                        <option value="">Seleccione compañia</option>
-                        {% for compania in companias %}
-                            <option value="{{ compania.id }}">{{ compania.name }}</option>
-                        {% endfor %}                        
-                    </select>
-                </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-sistema--app-target="btnGuardarCliente" data-action="sistema--app#guardarCliente" disabled>Guardar</button>
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-          </div>
-        </form>
+        {{ form_end(registrationForm) }}
       </div>
     </div>
-  </div>#}
+  </div>
 </turbo-frame>
