--- a/templates/reservas/index.html.twig
+++ b/templates/reservas/index.html.twig
@@ -4,10 +4,7 @@
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body">
                     <h5 class="card-title mb-3">Listado de check-in</h5>
-                    <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="Filtrar reservas..." id="filtroReservas">
-                    </div>
-                    <div class="table-responsive">
+                    <div class="table-responsive" style="overflow-x:auto; max-height: 50vh; overflow-y:auto;">
                         <table class="table table-striped table-hover align-middle mb-0 table-sm">
                             <thead class="table-dark">
                                 <tr>
@@ -24,7 +21,13 @@
                                 {% if checkins is not empty %}
                                     {% for checkin in checkins %}
                                         <tr>
-                                            <td>{{ checkin.reserva.numero }}</td>
+                                            <td>
+                                                {% if checkin.reserva is not null %}
+                                                    {{ checkin.reserva.numero }}
+                                                {% else %}
+                                                    Sin reserva
+                                                {% endif %}
+                                            </td>
                                             <td>{{ checkin.cliente.documentNumber }} - {{ checkin.cliente.name }} {{ checkin.cliente.lastname }}</td>
                                             <td>{{ checkin.cliente.cellphone }}</td>
                                             <td>{{ checkin.fechallegada|date('Y-m-d') }} {{ checkin.horallegada|date('H:i') }}</td>
@@ -36,26 +39,37 @@
                                                 {% if checkin.habitacion is not null  %}
                                                     {{ checkin.habitacion.name }}
                                                 {% endif %}
-                                            </td>
-                                            
-                                                {% if checkin.estado == 0 %}
-                                                    <td colspan=2 style="text-align:center; width: 20px;">
-                                                        <i class="fas fa-check-circle text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckin" data-id = {{ checkin.id }} data-cliente = {{ checkin.cliente.id }} ></i>
-                                                    </td>
-                                                {% elseif checkin.estado == 1 %}
-                                                    <td style="text-align:center; width: 20px;">
-                                                        <i class="far fa-window-maximize text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckOut" data-id = {{ checkin.id }} data-accion = '2'></i>
-                                                    </td>
-                                                    <td style="text-align:center; width: 20px;">
-                                                        <i class="fas fa-concierge-bell text-success" style="cursor:pointer; font-size:18px" data-action="click->sistema--app#abrirModalServicio" data-id = {{ checkin.id }} data-habitacion = {{ checkin.habitacion.name }}></i>
-                                                    </td>
-                                                    <td style="text-align:center; width: 20px;">
-                                                        <i class="fas fa-cart-plus text-success" style="cursor:pointer" data-action="click->sistema--app#abrirModalProductos" data-id = {{ checkin.id }} data-habitacion = {{ checkin.habitacion.name }} ></i>
-                                                    </td>
+                                            </td>    
+                                                {% if existeTurno == 1  %}                                        
+                                                    {% if checkin.estado == 0 %}
+                                                        <td colspan=2 style="text-align:center; width: 20px;">
+                                                            <i class="fas fa-check-circle text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckin" data-id = {{ checkin.id }} data-cliente = {{ checkin.cliente.id }} ></i>
+                                                        </td>
+                                                    {% elseif checkin.estado == 1 %}
+                                                        <td style="text-align:center; width: 20px;">
+                                                            <i class="far fa-window-maximize text-primary" style="cursor:pointer" data-action="click->sistema--app#abrirModalCheckOut" data-id = {{ checkin.id }} data-accion = '2'></i>
+                                                        </td>
+                                                        <td style="text-align:center; width: 20px;">
+                                                            <i class="fas fa-concierge-bell text-success" style="cursor:pointer; font-size:18px" data-action="click->sistema--app#abrirModalServicio" data-id = {{ checkin.id }} data-habitacion = {{ checkin.habitacion.name }}></i>
+                                                        </td>
+                                                        <td style="text-align:center; width: 20px;">
+                                                            <i class="fas fa-cart-plus text-success" style="cursor:pointer" data-action="click->sistema--app#abrirModalProductos" data-id = {{ checkin.id }} data-habitacion = {{ checkin.habitacion.name }} ></i>
+                                                        </td>
+                                                    {% else %}
+                                                        <td colspan=3 style="text-align:end; width: 20px;">
+                                                            <span class="badge bg-danger" data-action="click->sistema--app#verFactura" data-id = {{ checkin.id }} title="Ver factura" style="cursor:pointer" >Finalizado</span>
+                                                        </td>
+                                                    {% endif %}
                                                 {% else %}
-                                                    <td colspan=3 style="text-align:end; width: 20px;">
-                                                        <span class="badge bg-danger" data-action="click->sistema--app#verFactura" data-id = {{ checkin.id }} title="Ver factura" style="cursor:pointer" >Finalizado</span>
-                                                    </td>
+                                                    {% if checkin.estado == 2 %}
+                                                        <td colspan=3 style="text-align:center; width: 20px;">
+                                                            <span class="badge bg-danger" data-action="click->sistema--app#verFactura" data-id = {{ checkin.id }} title="Ver factura" style="cursor:pointer" >Finalizado</span>
+                                                        </td>
+                                                    {% else %}
+                                                        <td colspan=3 style="text-align:center; width: 20px;">
+                                                            <span class="badge bg-secondary" style="cursor:pointer" >Abrir turno</span>
+                                                        </td>
+                                                    {% endif %}
                                                 {% endif %}
                                             
                                             {% if checkin.estado == 0 %}
@@ -77,8 +91,7 @@
                     </div>
                 </div>
                 <div class="mt-3 d-flex justify-content-space-between" style="margin:20px">
-                    <button type="button" class="btn btn-primary btn-sm" style="margin-right:10px" data-action="click->sistema--app#abrirModalCheckin" data-id = "" data-cliente = "">Nuevo</button>
-                    <a href="{{ path('app_inicio') }}" class="btn btn-danger btn-sm">Regresar</a>
+                    <button type="button" class="btn btn-primary btn-sm" style="margin-right:10px" {% if existeTurno == 1 %} data-action="click->sistema--app#abrirModalCheckin" data-id = "" data-cliente = "" {% else %} disabled {% endif %}  >Nuevo</button>
                 </div>
             </div>
         </div>
